erDiagram

    users ||--|| roles : "tiene asignado"
    users ||--|| user_profiles : "tiene perfil"
    services ||--|| service_categories: "pertenece a"
    products ||--|| product_categories: "pertenece a"
    appointments ||--|| appointment_statuses: "tiene estado"
    users ||--|{ appointments : "agenda"

    %% Tablas intermedias (Many-to-Many)
    appointments ||--|{ appointment_service : "incluye"
    appointments ||--o{ appointment_product : "puede incluir"
    services }|--|{ appointment_service : "forma parte de"
    products }|--|{ appointment_product : "forma parte de"

    users {
        bigint id PK
        varchar(255) name
        varchar(255) email PK
        timestamp email_verified_at 
        varchar(255) password
        varchar(100) remember_token 
        timestamp created_at
        timestamp updated_at
        bigint role_id FK
    }

    user_profiles {
        bigint id PK
        bigint user_id FK
        varchar(20) phone_number
        varchar(255) profile_photo_url
        timestamp created_at
        timestamp updated_at
    }

    roles {
        bigint id PK
        varchar(50) name
    }

    services {
        bigint id PK
        varchar(255) name
        decimal(10) price
        int duration_minutes
        text description 
        varchar(255) image_url
        boolean is_visible
        bigint service_category_id FK
    }

    service_categories {
        bigint id PK
        varchar(100) name
    }

    products {
        bigint id PK
        varchar(255) name
        decimal price
        text description 
        varchar(255) image_url
        boolean is_visible
        bigint product_category_id FK
    }

    product_categories {
        bigint id PK
        varchar(100) name
    }

    appointments {
        bigint id PK
        timestamp scheduled_at
        varchar(500) cancellation_reason 
        bigint user_id FK
        bigint status_id FK
        timestamp created_at
        timestamp updated_at
    }

    appointment_statuses {
        bigint id PK
        varchar(100) name
    }

    appointment_service {
        bigint id PK
        bigint appointment_id FK
        bigint service_id FK
        int amount
        timestamp created_at
        timestamp updated_at
    }
    
    appointment_product {
        bigint id PK
        bigint appointment_id FK
        bigint product_id FK
        int amount
        timestamp created_at
        timestamp updated_at
    }
